--- a/letters/3/index.html
+++ b/letters/3/index.html
@@ -3,57 +3,69 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width" name="viewport">
+    <meta name="color-scheme" content="light only">
+    <meta name="supported-color-schemes" content="light only">
   </head>
-  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #EAEAEA repeat center top; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
-    <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; padding:0; width:100%;">
+  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #EAEAEA repeat center top !important; margin: 0; padding: 0; font-family: Georgia, sans-serif; color-scheme: light only;" data-ogsc>
+    <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; padding:0; width:100%; background-color: #EAEAEA !important;">
       <tbody>
         <tr>
-          <td>
-            <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; width:100%">
+          <td style="background-color: #EAEAEA !important;">
+            <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; width:100%; background-color: #EAEAEA !important;">
               <tbody>
                 <tr>
-                  <td style="padding-left:15px; padding-right:15px">
-                    <table align="center" style="background-color:#ffffff; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                  <td style="padding-left:15px; padding-right:15px; background-color: #EAEAEA !important;">
+                    <table align="center" style="background-color:#ffffff !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
-                          <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 12px;">
-                            <img align="center" width="170" src="./img/logo.png">
+                          <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 12px; background-color:#ffffff !important; color: #000000 !important;">
+                            <img
+                              align="center"
+                              width="170"
+                              src="./img/logo.png"
+                              style="display: block; border: 0;"
+                            >
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="text-align:center; width:100%; padding: 0;">
-                            <img align="center" width="600" src="./img/main.jpg">
+                          <td colspan="2" style="text-align:center; width:100%; padding: 0; background-color:#ffffff !important;">
+                            <img
+                              align="center"
+                              width="600"
+                              src="./img/main.jpg"
+                              style="display: block; border: 0; max-width: 100%; height: auto;"
+                            >
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 52px; border-bottom: 1px dashed #000000;">
-                            <p style="color:#000000; margin: 0; margin-top: 37px; margin-bottom: 32px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
+                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 52px; border-bottom: 1px dashed #000000; background-color:#ffffff !important;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 37px; margin-bottom: 32px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
                               Привет!
                             </p>
-                            <p style="color:#000000; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; font-weight:400;">
                               Спасибо за регистрацию на 34travel.me!
                             </p>
-                            <p style="color:#000000; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Теперь планирование путешествий стало проще: ты можешь сохранять понравившиеся тексты 34travel в «Избранном» и сортировать их по «Коллекциям» в личном кабинете.
                             </p>
-                            <p style="color:#000000; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               «Коллекции» – это отличный способ организовать информацию, связанную с предстоящими поездками, и не держать открытыми десятки вкладок. Нужные статьи всегда будут под рукой – просто нажми на ⭐ внутри материала.
                             </p>
-                            <p style="color:#000000; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Не планируешь путешествие прямо сейчас? Используй «Коллекции» для создания списка чтения или мудборда для будущих поездок. Собирай интересные статьи, советы и идеи, чтобы быть готовым(-ой) к следующему приключению.
                             </p>
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 40px;">
-                            <p style="color:#000000; margin: 0; margin-top: 71px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 40px; background-color:#ffffff !important;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 71px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Получить максимум пользы от нашего сайта ты сможешь, оформив подписку. С ней ты получишь полный доступ ко всем фирменным гайдам и эксклюзивным материалам 34travel.me.
                             </p>
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:center; padding-right: 10px; padding-left: 10px;">
-                            <p style="color:#000000; margin: 0; margin-top: 24px; font-family:'Georgia', sans-serif; font-size: 20px; line-height: 25px; font-weight:700; padding-bottom: 20px;">
+                          <td colspan="2" style="padding:0; text-align:center; padding-right: 10px; padding-left: 10px; background-color:#ffffff !important;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 24px; font-family:'Georgia', sans-serif; font-size: 20px; line-height: 25px; font-weight:700; padding-bottom: 20px;">
                               Мы предлагаем тарифы:
                             </p>
                             <table
@@ -63,27 +75,27 @@
                               border="0"
                             >
                               <tr>
-                                <td style="background-color: #F9E855; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
                                     Подписка на месяц
                                   </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000; margin: 0;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
                                     Помогает спланировать ближайшее путешествие.
                                   </p>
                                 </td>
-                                <td style="background-color: #F9E855; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
                                     Подписка на год
                                   </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000; margin: 0;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
                                     Даёт неограниченный доступ и возможность сорваться в трип в любой момент.
                                   </p>
                                 </td>
-                                <td style="background-color: #F9E855; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
                                     Подписка в подарок
                                   </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000; margin: 0;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
                                     Доступ ко всем гайдам 34travel ты можешь подарить другу или подруге, которые отправляются в путешествие.
                                   </p>
                                 </td>
@@ -92,7 +104,7 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:center; padding-right: 20px; padding-left: 20px; padding-top: 12px; padding-bottom: 59px;">
+                          <td colspan="2" style="padding:0; text-align:center; padding-right: 20px; padding-left: 20px; padding-top: 12px; padding-bottom: 59px; background-color:#ffffff !important;">
                             <table
                               cellpadding="0"
                               cellspacing="0"
@@ -100,10 +112,10 @@
                               align="center"
                             >
                               <tr>
-                                <td style="background-color: #000000; padding: 19px 24px 19px 24px; width: 252px;">
-                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff; text-decoration: none; font-size: 16px; line-height: 18px;">
+                                <td style="background-color: #000000 !important; padding: 19px 24px 19px 24px; width: 252px;">
+                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff !important; text-decoration: none; font-size: 16px; line-height: 18px;">
                                     Оформить
-                                    <img src="./img/arrow.png" width="63" style="padding-left: 30px;">
+                                    <img src="./img/arrow.png" width="63" style="padding-left: 30px; border: 0; display: inline-block; vertical-align: middle;">
                                   </a>
                                 </td>
                               </tr>
@@ -111,13 +123,13 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 59px; border-bottom: 1px dashed #000000;">
-                            <p style="font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; color: #000000; margin: 0; padding-bottom: 48px;">
+                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 59px; border-bottom: 1px dashed #000000; background-color:#ffffff !important;">
+                            <p style="font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; color: #000000 !important; margin: 0; padding-bottom: 48px;">
                               Если у тебя возникнут вопросы или проблемы с доступом к личному кабинету, пиши нам на
-                              <a href="mailto:support@34travel.me" style="color: #000000;">support@34travel.me</a>
+                              <a href="mailto:support@34travel.me" style="color: #000000 !important;">support@34travel.me</a>
                               .
                             </p>
-                            <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; color: #000000; margin: 0;">
+                            <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; color: #000000 !important; margin: 0;">
                               Классных путешествий,
                               <br>
                               Команда 34travel.me
@@ -125,7 +137,7 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding: 0; text-align: center; padding-right: 40px; padding-left: 40px; padding-top: 50px; padding-bottom: 32px;">
+                          <td colspan="2" style="padding: 0; text-align: center; padding-right: 40px; padding-left: 40px; padding-top: 50px; padding-bottom: 32px; background-color:#ffffff !important;">
                             <table
                               cellpadding="0"
                               cellspacing="0"
