--- a/letters/4/index.html
+++ b/letters/4/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width" name="viewport">
+    <meta name="color-scheme" content="light only">
+    <meta name="supported-color-schemes" content="light only">
   </head>
-  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #A0A18F repeat center top; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
+  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #A0A18F repeat center top !important; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
     <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; padding:0; width:100%;">
       <tbody>
         <tr>
@@ -13,7 +15,7 @@
               <tbody>
                 <tr>
                   <td style="padding-left:15px; padding-right:15px;">
-                    <table align="center" style="background-color:#A0A18F; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" style="background-color:#A0A18F !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 12px;">
@@ -22,7 +24,7 @@
                         </tr>
                       </tbody>
                     </table>
-                    <table align="center" style="background-color:#ffffff; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" style="background-color:#ffffff !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0;">
@@ -31,10 +33,10 @@
                         </tr>
                         <tr>
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 34px;">
-                            <p style="color:#000000; margin: 0; margin-top: 37px; margin-bottom: 40px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 37px; margin-bottom: 40px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
                               Добро пожаловать в команду подписчиков 34travel.me!
                             </p>
-                            <p style="color:#000000; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Теперь у тебя есть полный доступ к нашим фирменным гайдам по городам и к другим эксклюзивным материалам. Ты также можешь сохранять понравившиеся материалы в «Избранном» и объединять их в «Коллекции» в личном кабинете.
                             </p>
                           </td>
@@ -43,27 +45,27 @@
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 23px;">
                             <table style="width: 100%;">
                               <tr>
-                                <td style="padding-right: 50px; padding-left: 50px; padding-top: 24px; padding-bottom: 35px; border: 1px solid #000000;">
-                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000; margin: 0; font-weight:700; margin-bottom: 32px;">
+                                <td style="padding-right: 50px; padding-left: 50px; padding-top: 24px; padding-bottom: 35px; border: 1px solid #000000 !important;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000 !important; margin: 0; font-weight:700; margin-bottom: 32px;">
                                     Детали твоего тарифного плана:
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Тип:</span>
                                     Подписка на месяц/год/семейная
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
-                                    <span style="font-weight:700;">Дата оплаты:</span>
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
+                                    <span style="font-weight:700;">Дата оплата:</span>
                                     [XX Month YYYY]
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Номер транзакции:</span>
                                     #xx
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Сумма:</span>
                                     EUR
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Дата следующего списания:</span>
                                     [XX Month YYYY]
                                   </p>
@@ -82,8 +84,8 @@
                               style="width: 100%;"
                             >
                               <tr>
-                                <td style="background-color: #000000; padding: 19px 24px 19px 24px; width: 100%;">
-                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff; text-decoration: none; font-size: 16px; line-height: 18px;">
+                                <td style="background-color: #000000 !important; padding: 19px 24px 19px 24px; width: 100%;">
+                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff !important; text-decoration: none; font-size: 16px; line-height: 18px;">
                                     Управлять подпиской
                                     <img src="./img/arrow.png" width="63" style="padding-left: 30px;">
                                   </a>
@@ -93,14 +95,14 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 63px; border-bottom: 1px dashed #000000;">
-                            <p style="color:#000000; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 63px; border-bottom: 1px dashed #000000 !important;">
+                            <p style="color:#000000 !important; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Мы стараемся не заваливать тебя лишними письмами, но платежная система нашего сайта пришлет тебе отдельный чек о покупке.
                             </p>
-                            <p style="color:#000000; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Спасибо, что ты с нами. Твоя подписка – гарантия того, что новых гайдов будет больше.
                             </p>
-                            <p style="color:#000000; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                            <p style="color:#000000 !important; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Классных путешествий,
                               <br>
                               Команда 34travel.me
