--- a/letters/5/index.html
+++ b/letters/5/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width" name="viewport">
+    <meta name="color-scheme" content="light only">
+    <meta name="supported-color-schemes" content="light only">
   </head>
-  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #FFFFFF repeat center top; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
+  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #FFFFFF repeat center top !important; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
     <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; padding:0; width:100%;">
       <tbody>
         <tr>
@@ -13,7 +15,7 @@
               <tbody>
                 <tr>
                   <td style="padding-left:15px; padding-right:15px;">
-                    <table align="center" style="background-color:#FFFFFF; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" style="background-color:#FFFFFF !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 12px;">
@@ -22,7 +24,7 @@
                         </tr>
                       </tbody>
                     </table>
-                    <table align="center" style="background-color:#EDEDED; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" style="background-color:#EDEDED !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 30px;">
@@ -33,33 +35,33 @@
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 36px;">
                             <table style="width: 100%;">
                               <tr>
-                                <td style="padding-right: 50px; padding-left: 50px; padding-top: 24px; padding-bottom: 40px; border: 1px solid #000000;">
-                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000; margin: 0; font-weight:700;">
+                                <td style="padding-right: 50px; padding-left: 50px; padding-top: 24px; padding-bottom: 40px; border: 1px solid #000000 !important;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000 !important; margin: 0; font-weight:700;">
                                     Чек от 34travel.me
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000; margin: 0; font-weight:700; margin-bottom: 14px;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 20px; line-height: 28px; color: #000000 !important; margin: 0; font-weight:700; margin-bottom: 14px;">
                                     [номер счета]
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Сумма:</span>
                                     34 EUR
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Дата оплаты:</span>
                                     22.06.2025
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Метод оплаты:</span>
                                     MasterCard
                                   </p>
                                   <br>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Итог:</span>
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     Месячная подписка
                                   </p>
-                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000; margin: 0; font-weight:400;">
+                                  <p style="font-family:'Arial', sans-serif; font-size: 13px; line-height: 23px; color: #000000 !important; margin: 0; font-weight:400;">
                                     <span style="font-weight:700;">Итоговая сумма списания:</span>
                                     34 EUR
                                   </p>
@@ -69,12 +71,12 @@
                           </td>
                         </tr>
                         <tr>
-                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 100px; border-bottom: 1px dashed #000000;">
-                            <p style="color:#000000; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                          <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 100px; border-bottom: 1px dashed #000000 !important;">
+                            <p style="color:#000000 !important; margin: 0; margin-bottom: 24px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
                               Если возникли вопросы или проблемы, обращайся по адресу
-                              <a href="mailto:support@34travel.me" style="color: #000000;">support@34travel.me</a>
+                              <a href="mailto:support@34travel.me" style="color: #000000 !important;">support@34travel.me</a>
                               или звони
-                              <a href="tel:+370_______" style="color: #000000; text-decoration: none;">+370 _________</a>
+                              <a href="tel:+370_______" style="color: #000000 !important; text-decoration: none;">+370 _________</a>
                               .
                             </p>
                           </td>
