--- a/letters/2/index.html
+++ b/letters/2/index.html
@@ -5,8 +5,44 @@
     <meta content="width=device-width" name="viewport">
     <meta name="color-scheme" content="light only">
     <meta name="supported-color-schemes" content="light only">
+    <style>    
+      @media only screen and (max-width:480px){     
+        u + .body .white-text{
+          background-image:linear-gradient(#ffffff,#ffffff);
+          background-clip: text;
+          color: transparent;
+        }        
+        div > u + .body .white-text{
+          background-image:none;
+          background-clip: inherit;
+          color: #ffffff;
+        }     
+        u + .body .black-text{
+          background-image:linear-gradient(#000000,#000000);
+          background-clip: text;
+          color: transparent;
+        }
+        div > u + .body .black-text{
+          background-image:none;
+          background-clip: inherit;
+          color: #000000;
+        }  
+        u + .body .white-bg{
+          background-image:linear-gradient(#ffffff,#ffffff);
+        }
+        u + .body .black-bg{
+          background-image:linear-gradient(#000000,#000000);
+        }
+        u + .body .yellow-bg{
+          background-image:linear-gradient(#F9E855,#F9E855);
+        }
+        u + .body .gray-bg{
+          background-image:linear-gradient(#96A6BA,#96A6BA);
+        }
+      }
+    </style>
   </head>
-  <body style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #96A6BA repeat center top !important; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
+  <body class="body" style="width: 100% !important; min-width: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; text-align: left; line-height: 1.4; background: #96A6BA repeat center top !important; margin: 0; padding: 0; font-family: Georgia, sans-serif;">
     <table cellpadding="0" cellspacing="0" style="border:0; border-collapse:collapse; border-spacing:0; margin:0; padding:0; width:100%;">
       <tbody>
         <tr>
@@ -15,7 +51,7 @@
               <tbody>
                 <tr>
                   <td style="padding-left:15px; padding-right:15px;">
-                    <table align="center" style="background-color:#96A6BA !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" class="gray-bg" style="background-color:#96A6BA !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0; padding-bottom: 12px;">
@@ -24,7 +60,7 @@
                         </tr>
                       </tbody>
                     </table>
-                    <table align="center" style="background-color:#ffffff !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
+                    <table align="center" class="white-bg" style="background-color:#ffffff !important; border-spacing:0; margin:0 auto 0 auto; width: 600px; max-width:600px;">
                       <tbody>
                         <tr>
                           <td colspan="2" style="text-align:center; width:100%; padding: 0;">
@@ -33,34 +69,34 @@
                         </tr>
                         <tr>
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 52px; border-bottom: 1px dashed #000000 !important;">
-                            <p style="color:#000000 !important; margin: 0; margin-top: 37px; margin-bottom: 32px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
-                              Привет!
+                            <p style="margin: 0; margin-top: 37px; margin-bottom: 32px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 23px; line-height: 28px; font-weight:700;">
+                              <span class="black-text" style="color:#000000 !important;">Привет!</span>
                             </p>
-                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; font-weight:400;">
-                              Спасибо за регистрацию на 34travel.me!
+                            <p style="margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; font-weight:400;">
+                              <span class="black-text" style="color:#000000 !important;">Спасибо за регистрацию на 34travel.me!</span>
                             </p>
-                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
-                              Теперь планирование путешествий стало проще: ты можешь сохранять понравившиеся тексты 34travel в «Избранном» и сортировать их по «Коллекциям» в личном кабинете.
+                            <p style="margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                              <span class="black-text" style="color:#000000 !important;">Теперь планирование путешествий стало проще: ты можешь сохранять понравившиеся тексты 34travel в «Избранном» и сортировать их по «Коллекциям» в личном кабинете.</span>
                             </p>
-                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
-                              «Коллекции» – это отличный способ организовать информацию, связанную с предстоящими поездками, и не держать открытыми десятки вкладок. Нужные статьи всегда будут под рукой – просто нажми на ⭐ внутри материала.
+                            <p style="margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                              <span class="black-text" style="color:#000000 !important;">«Коллекции» – это отличный способ организовать информацию, связанную с предстоящими поездками, и не держать открытыми десятки вкладок. Нужные статьи всегда будут под рукой – просто нажми на ⭐ внутри материала.</span>
                             </p>
-                            <p style="color:#000000 !important; margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
-                              Не планируешь путешествие прямо сейчас? Используй «Коллекции» для создания списка чтения или мудборда для будущих поездок. Собирай интересные статьи, советы и идеи, чтобы быть готовым(-ой) к следующему приключению.
+                            <p style="margin: 0; margin-top: 22px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                              <span class="black-text" style="color:#000000 !important;">Не планируешь путешествие прямо сейчас? Используй «Коллекции» для создания списка чтения или мудборда для будущих поездок. Собирай интересные статьи, советы и идеи, чтобы быть готовым(-ой) к следующему приключению.</span>
                             </p>
                           </td>
                         </tr>
                         <tr>
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 40px;">
-                            <p style="color:#000000 !important; margin: 0; margin-top: 71px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
-                              Получить максимум пользы от нашего сайта ты сможешь, оформив подписку. С ней ты получишь полный доступ ко всем фирменным гайдам и эксклюзивным материалам 34travel.me.
+                            <p style="margin: 0; margin-top: 71px; font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; font-weight:400;">
+                              <span class="black-text" style="color:#000000 !important;">Получить максимум пользы от нашего сайта ты сможешь, оформив подписку. С ней ты получишь полный доступ ко всем фирменным гайдам и эксклюзивным материалам 34travel.me.</span>
                             </p>
                           </td>
                         </tr>
                         <tr>
                           <td colspan="2" style="padding:0; text-align:center; padding-right: 10px; padding-left: 10px;">
-                            <p style="color:#000000 !important; margin: 0; margin-top: 24px; font-family:'Georgia', sans-serif; font-size: 20px; line-height: 25px; font-weight:700; padding-bottom: 20px;">
-                              Мы предлагаем тарифы:
+                            <p style="margin: 0; margin-top: 24px; font-family:'Georgia', sans-serif; font-size: 20px; line-height: 25px; font-weight:700; padding-bottom: 20px;">
+                              <span class="black-text" style="color:#000000 !important;">Мы предлагаем тарифы:</span>
                             </p>
                             <table
                               width="100%"
@@ -69,28 +105,28 @@
                               border="0"
                             >
                               <tr>
-                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
-                                    Подписка на месяц
+                                <td class="yellow-bg" style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                    <span class="black-text" style="color: #000000 !important;">Подписка на месяц</span>
                                   </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
-                                    Помогает спланировать ближайшее путешествие.
-                                  </p>
-                                </td>
-                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
-                                    Подписка на год
-                                  </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
-                                    Даёт неограниченный доступ и возможность сорваться в трип в любой момент.
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; margin: 0;">
+                                    <span class="black-text" style="color: #000000 !important;">Помогает спланировать ближайшее путешествие.</span>
                                   </p>
                                 </td>
-                                <td style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; color: #000000 !important; margin: 0; font-weight: 700; padding-bottom: 20px;">
-                                    Подписка в подарок
+                                <td class="yellow-bg" style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                    <span class="black-text" style="color: #000000 !important;">Подписка на год</span>
                                   </p>
-                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; color: #000000 !important; margin: 0;">
-                                    Доступ ко всем гайдам 34travel ты можешь подарить другу или подруге, которые отправляются в путешествие.
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; margin: 0;">
+                                    <span class="black-text" style="color: #000000 !important;">Даёт неограниченный доступ и возможность сорваться в трип в любой момент.</span>
+                                  </p>
+                                </td>
+                                <td class="yellow-bg" style="background-color: #F9E855 !important; padding-left: 20px; padding-right: 20px; padding-top: 29px; padding-bottom: 43px; text-align: center; width: 33%; border: 1px solid #000000 !important; vertical-align: top;">
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; text-align: center; font-size: 17px; line-height: 20px; margin: 0; font-weight: 700; padding-bottom: 20px;">
+                                    <span class="black-text" style="color: #000000 !important;">Подписка в подарок</span>
+                                  </p>
+                                  <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 12px; line-height: 18px; margin: 0;">
+                                    <span class="black-text" style="color: #000000 !important;">Доступ ко всем гайдам 34travel ты можешь подарить другу или подруге, которые отправляются в путешествие.</span>
                                   </p>
                                 </td>
                               </tr>
@@ -106,10 +142,12 @@
                               align="center"
                             >
                               <tr>
-                                <td style="background-color: #000000 !important; padding: 19px 24px 19px 24px; width: 252px;">
-                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; color: #ffffff !important; text-decoration: none; font-size: 16px; line-height: 18px;">
-                                    Оформить
-                                    <img src="./img/arrow.png" width="63" style="padding-left: 30px;">
+                                <td class="black-bg" style="background-color: #000000 !important; padding: 19px 24px 19px 24px; width: 252px;">
+                                  <a href="#" style="font-family:'Georgia', sans-serif; font-style: italic; font-weight: 700; text-decoration: none; font-size: 16px; line-height: 18px;">
+                                    <span class="white-text" style="color: #ffffff !important;">
+                                      Оформить
+                                      <img src="./img/arrow.png" width="63" style="padding-left: 30px;">
+                                    </span>
                                   </a>
                                 </td>
                               </tr>
@@ -118,15 +156,19 @@
                         </tr>
                         <tr>
                           <td colspan="2" style="padding:0; text-align:left; padding-right: 50px; padding-left: 50px; padding-bottom: 59px; border-bottom: 1px dashed #000000 !important;">
-                            <p style="font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; color: #000000 !important; margin: 0; padding-bottom: 48px;">
-                              Если у тебя возникнут вопросы или проблемы с доступом к личному кабинету, пиши нам на
-                              <a href="mailto:support@34travel.me" style="color: #000000 !important;">support@34travel.me</a>
-                              .
+                            <p style="font-family:'Georgia', sans-serif; font-size: 16px; line-height: 23px; margin: 0; padding-bottom: 48px;">
+                              <span class="black-text" style="color: #000000 !important;">
+                                Если у тебя возникнут вопросы или проблемы с доступом к личному кабинету, пиши нам на
+                                <a href="mailto:support@34travel.me" style="color: #000000 !important;">support@34travel.me</a>
+                                .
+                              </span>
                             </p>
-                            <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; color: #000000 !important; margin: 0;">
-                              Классных путешествий,
-                              <br>
-                              Команда 34travel.me
+                            <p style="font-family:'Georgia', sans-serif; font-style: italic; font-size: 16px; line-height: 23px; margin: 0;">
+                              <span class="black-text" style="color: #000000 !important;">
+                                Классных путешествий,
+                                <br>
+                                Команда 34travel.me
+                              </span>
                             </p>
                           </td>
                         </tr>
