--- a/Subscription - all forms/05 Subscription - as-a-gift-error.html
+++ b/Subscription - all forms/05 Subscription - as-a-gift-error.html
@@ -31,18 +31,15 @@
       type="application/rss+xml"
       href="https://34t.farbatest.com/feed"
     >
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/ulej-tips-styles.css?v=1676300078">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/ulej-tips-styles.css?v=1676300078">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i|Roboto+Condensed:400,400i,700,700i&amp;subset=cyrillic&amp;display=swap">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Spectral:wght@500;700&amp;display=swap">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/vendor.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/style.css?v=1701529028">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/select2.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/main.css?v=1687869114">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/slick.css?v=1676300069">
-    <link rel="stylesheet" type="text/css" href="https://34t.farbatest.com/themes/travel/css/custom.css?v=1696596981">
-  </head>
-  <body>
-    <link rel="stylesheet" type="text/css" href="../css/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/vendor.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/style.css?v=1701529028">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/select2.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/main.css?v=1687869114">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/slick.css?v=1676300069">
+    <link rel="stylesheet" type="text/css" href="https://34travel.me/themes/travel/css/custom.css?v=1696596981">
     <link rel="stylesheet" type="text/css" href="../css/magnific.min.css">
     <link rel="stylesheet" type="text/css" href="../css/custom2.css">
     <link rel="stylesheet" type="text/css" href="../css/custom-new.css">
@@ -601,6 +598,12 @@
                         class="form_long-input"
                         required
                       >
+                      <label
+                        id="email1-error"
+                        class="error"
+                        for="email1"
+                        style="display: none;"
+                      >Некорректный адрес Email</label>
                     </div>
                   </div>
                   <div class="from-item from-item__mb_90">
@@ -974,25 +977,22 @@ _tmr.push({id: "3122769", type: "pageView", start: (new Date()).getTime()});
           <img src="https://top-fwz1.mail.ru/counter?id=3122769;js=na" style="border:0;position:absolute;left:-9999px;" alt="Top.Mail.Ru">
         </div>
       </noscript>
-      <!-- //Rating@Mail.ru counter -->
-      <script type="text/javascript" src="https://34t.farbatest.com/assets/787a1313/jquery-2.2.4.min.js"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/comment.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/social-likes.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/modernizr-custom.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/imagesloaded.pkgd.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery.maskedinput.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/select2.full.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/slick.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/fastclick.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/main.js?v=1676300069"></script>
-      <script type="text/javascript" src="../js/bootstrap/bootstrap.min.js"></script>
-      <script type="text/javascript" src="../js/magnific.min.js?v=1676300069"></script>
-      <script type="text/javascript" src="../js/cookies.min.js"></script>
-      <script type="text/javascript" src="../js/jquery.validate.min.js"></script>
-      <!-- jquey-ui -->
-      <script type="text/javascript" src="../js/jquery-ui.min.js"></script>
-      <script type="text/javascript" src="../js/custom.js?v=1676300069"></script>
-      <script type="text/javascript" async="" src="https://top-fwz1.mail.ru/js/dyn-goal-config.js?ids=3122769"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/assets/800036ea/jquery-2.2.4.min.js"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/farbaCookieManager.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/imagesloaded.pkgd.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/modernizr-custom.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery.maskedinput.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/select2.full.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/slick.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/fastclick.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/main.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/magnific.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/cookies.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery.validate.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery-ui.min.js?v=1758738614"></script>
+      <script type="text/javascript" src="../js/custom.js"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/all_custom.js?v=1758738614"></script>
+      <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/cookie.js?v=1758738614"></script>
       <div id="monica-content-root" class="monica-widget"></div>
     </body>
   </html>
